--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "soccer_stats",
+  "homepage":"https://AletzMan.github.io/soccer_stats",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
     "firebase": "^9.17.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
