--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://AletzMan.github.io/soccer_stats",
   "name": "soccer_stats",
   "private": true,
   "version": "0.0.0",
@@ -6,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build -p",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -20,6 +23,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
+    "http-proxy-middleware": "^2.0.6",
+    "terser-brunch": "^4.1.0",
     "vite": "^4.1.0"
   }
 }
